# nexad

./: Cargo.toml  Cross.toml  README.md  build.rs  index.html
.github/workflows/: auto-release.yml  bench.yml  ci.yml  release.yml
benches/: crypto.rs  dns.rs  sqlite_store.rs
dev/bench/: data.js
examples/: app.yaml  nginx.yaml
migrations/: 20260521000001_initial_schema.sql  20260521000002_add_container_ip.sql  20260521000003_add_nodes_and_cluster_config.sql  20260521000004_networking.sql  20260522000005_cascade_delete_project.no_tx.sql
proto/: cluster.proto
src/: lib.rs  main.rs
src/adapters/: event_watcher.rs  mod.rs
src/adapters/dns/: hickory.rs  mod.rs  noop.rs  record_store.rs
src/adapters/health/: mod.rs
src/adapters/metrics/: mod.rs  prometheus.rs
src/adapters/network/: mod.rs  subnet.rs  wireguard.rs
src/adapters/proxy/: caddy.rs  mod.rs  nexa_proxy.rs  nginx.rs  traefik.rs
src/adapters/runtime/: cni.rs  containerd.rs  detect.rs  docker.rs  log_tailer.rs  mod.rs
src/adapters/secrets/: encrypted.rs  mod.rs
src/adapters/state/: memory_route_store.rs  mod.rs  sqlite.rs
src/adapters/tls/: acme.rs  mod.rs  renewal.rs
src/adapters/transport/: grpc.rs  local.rs  mod.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/cluster/: heartbeat.rs  mod.rs  server.rs  token.rs  worker.rs
src/crypto/: master_key.rs
src/engine/: mod.rs  orchestrator.rs
tests/: api_integration.rs  e2e.rs  runtime_integration.rs  sqlite_integration.rs
