[package]
name = "nexad"
description = "NexaNet daemon — container orchestration engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nexa-net/nexad"
rust-version = "1.85"

[lib]
name = "nexad"
path = "src/lib.rs"

[[bin]]
name = "nexad"
path = "src/main.rs"

[dependencies]
nexa-core = { git = "https://github.com/nexa-net/nexa-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
bollard = "0.18"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
aes-gcm = "0.10"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tonic = "0.12"
prost = "0.13"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.32"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
